<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create_sprt_evt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.seproject.neagaze.macalerts.CreateSprtEvtActivity"
    tools:showIn="@layout/activity_create_sprt_evt">

    <!-- Sport Name -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/sport_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sport_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- Max team size -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/max_team_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sport_ma_team"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- Min team size -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/min_team_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sport_min_team"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_manager"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/bt_mgr_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Add"/>

        <Spinner
            android:id="@+id/mgr_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dp"
            android:entries="@array/referees_arrays" />
    </LinearLayout>

    <Button
        android:id="@+id/create_sprt_evt_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prompt_create_sprt_evt"
        android:textStyle="bold" />


</LinearLayout>
