<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sport_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/prompt_sport_name"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_min_team_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_sport_min_team"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tv_max_team_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_sport_ma_team"
            android:textSize="10dp" />


        <ListView
            android:id="@+id/lv_referees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_venue"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textSize="10dp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/lv_venues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_date"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="Time"
            android:textSize="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/bt_confirm_sport_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"/>

    </LinearLayout>
</android.support.v7.widget.CardView>